# physics-sim

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp  run.sh
src/: glad.c
src/windows/: window.cpp  window.h
